--- a/src/main/resources/templates/login/weight.html
+++ b/src/main/resources/templates/login/weight.html
@@ -66,12 +66,11 @@
             <div style="width: 100%; height: 250px; background-color: rgb(221, 221, 221);">
                 <p style="text-align: center; height: 50%; font-weight:bold; color: gray;">glaff</p>
             </div>
-            <form method="post" th:action="@{/weight}" th:object="${recordForm}">
+            <!-- <form method="post" th:action="@{/weight}" th:object="${recordForm}">
                 <div class="deleteButton">
-                    <button type="submit" name="delete">体重を削除する</button>
-                    <!--<a th:href="@{/delete}">体重を削除する</a>-->
+                    <button type="submit" name="delete">全削除</button>
                 </div>
-            </form>
+            </form> -->
             <div class="recordButton">
                 <a th:href="@{/record}">体重を記録する</a>
                 <!--<a th:href="@{/watch}" id="menu">閲覧(削除予定)</a>-->
@@ -81,15 +80,15 @@
                 <tr>
                     <th>Date</th>
                     <th>Weight</th>
+                    <th>id(autoIncrement)</th>
                 </tr>
                 <tr th:each="weight : ${weightList}">
                     <td th:text="${#dates.format(weight.sqlDate, 'yyyy/MM/dd')}"></td>
-                    <!-- <td th:text="${weight.sqlDate}"></td> -->
-                    <!-- <td th:text="${weight.recordYear} +'/'+ ${weight.recordMonth} +'/'+ ${weight.recordDay}"></td> -->
                     <td th:text="${weight.recordWeight} + kg"></td>
-                    <!--
-                            <td><button class="btn btn-outline-danger btn-sm" type="submit" name="delete">削除する</button></td>
-                        -->
+                    <td th:text="${weight.recordId}"></td>
+                    <form method="POST" th:action="@{/weight}" th:object="${recordForm}">
+                    <td><button type="submit" name="deleteOne" class="btn btn-danger btn-sm">削除</button></td>                        
+                    </form>
                 </tr>
             </table>
         </div>
